platform-engineering/security/lab2/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: bad-pod
  name: bad-pod
spec:
  volumes:
  - name: host-fs
    hostPath:
      path: /
  containers:
  - image: ubuntu
    imagePullPolicy: Always
    name: bad-pod
    command: ["/bin/sh", "-c", "sleep infinity"]
    volumeMounts:
      - name: host-fs
        mountPath: /root
  restartPolicy: Never
