platform-engineering/security/lab2/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
    role: frontend
  name: frontend
spec:
  containers:
  - image: curlimages/curl
    name: frontend
    command: ["/bin/sh", "-c", "sleep infinity"]
  restartPolicy: Never
