platform-engineering/security/lab2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pets-service
spec:
  selector:
    app: pets
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
